CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(LAB)


SET (LAB_INCLUDE_DIRS  ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "The list of include folders to search for include files.")

SET (LAB_LIBS CACHE INTERNAL "The list of libraries that to link against.")


FIND_PACKAGE(OpenSceneGraph REQUIRED osgUtil osgDB osgGA osgViewer osgWidget)
IF (OPENSCENEGRAPH_FOUND)
  SET (LAB_INCLUDE_DIRS ${LAB_INCLUDE_DIRS} ${OPENSCENEGRAPH_INCLUDE_DIRS})
  SET (LAB_LIBS ${LAB_LIBS} ${OPENSCENEGRAPH_LIBRARIES})
ENDIF ()


ADD_EXECUTABLE(lab stubb.cpp)

INCLUDE_DIRECTORIES(${LAB_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(lab ${LAB_LIBS})
